syntax = "proto3";

package identity.v1;

option go_package = "go-link/common/gen/identity/v1;identityv1";

service IdentityService {
  rpc GetUserRole(GetUserRoleRequest) returns (GetUserRoleResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc UpdateTenantPlan(UpdateTenantPlanRequest) returns (UpdateTenantPlanResponse);
}

message GetUserRoleRequest {
  int64 user_id = 1;
  int64 tenant_id = 2;
}

message GetUserRoleResponse {
  Role role = 2;
}

message Role {
  int64 id = 1;
  string name = 2;
  int32 level = 3;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  int32 gender = 5;     // 0: male, 1: female, 2: other
  string birthday = 6;  // Format: 2006-01-02
}

message CreateUserResponse {
  int64 user_id = 1;
  int64 tenant_id = 2;
}

message DeleteUserRequest {
  int64 user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message UpdateTenantPlanRequest {
  int64 tenant_id = 1;
  int64 plan_id = 2;
}

message UpdateTenantPlanResponse {
  bool success = 1;
}
